PyMaker/datas/object2/RawHTML/i14101/Python_DOC_referPages.how-to-run-python-in-windows-7.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/25445439/what-does-syntaxerror-missing-parentheses-in-call-to-print-mean-in-python">What does “SyntaxError: Missing parentheses in call to 'print'” mean in Python?</a>
<span class="question-originals-answer-count">
                    6 answers
                </span>
</li>
</ul>
</div>
<p>i am new to python. i am try to run my first hello world program but i got an error msg.</p>
<p>please find below the screen shot </p>
<p><img alt="enter image description here" src="https://i.stack.imgur.com/cDtJ3.png"/></p>
<p>Error Msg look like this:</p>
<p><strong>&gt;&gt;&gt; print "hello"</strong></p>
<p><strong>File "" line1</strong></p>
<p><strong>print "hello"
            ^</strong></p>
<p><strong>SyntaxError: Missing parentheses in call to 'print'</strong></p>
</div>
<div class="post-text" itemprop="text">
<p>You are using <code>Python 3</code>, In this version <code>print</code> is not a keyword it is a <code>function</code>.
Try this :</p>
<pre><code>print("hello")
</code></pre>
<p>See changes in <a href="https://docs.python.org/3/whatsnew/3.0.html#print-is-a-function" rel="nofollow">Python3 from Python 2</a></p>
</div>
<span class="comment-copy">thanks it's working</span>
